standards/gnds-2.0-alpha/alpha/c/src/v2.0/mean/FissionEnergyRelease.h

// --- Const-aware handles.
typedef const struct FissionEnergyReleaseClass *const ConstHandle2ConstFissionEnergyRelease;
typedef       struct FissionEnergyReleaseClass *const ConstHandle2FissionEnergyRelease;
typedef const struct FissionEnergyReleaseClass *      Handle2ConstFissionEnergyRelease;
typedef       struct FissionEnergyReleaseClass *      Handle2FissionEnergyRelease;
// -----------------------------------------------------------------------------
// Basics
// Create, Assign, Delete
// -----------------------------------------------------------------------------

// --- Create, default, const
extern_c Handle2ConstFissionEnergyRelease
FissionEnergyReleaseDefaultConst();
// +++ Create, default
extern_c Handle2FissionEnergyRelease
FissionEnergyReleaseDefault();
// --- Create, general, const
extern_c Handle2ConstFissionEnergyRelease
FissionEnergyReleaseCreateConst(
   const char *const label,
   ConstHandle2ConstPromptProductKE promptProductKE,
   ConstHandle2ConstPromptNeutronKE promptNeutronKE,
   ConstHandle2ConstDelayedNeutronKE delayedNeutronKE,
   ConstHandle2ConstPromptGammaEnergy promptGammaEnergy,
   ConstHandle2ConstDelayedGammaEnergy delayedGammaEnergy,
   ConstHandle2ConstDelayedBetaEnergy delayedBetaEnergy,
   ConstHandle2ConstNeutrinoEnergy neutrinoEnergy,
   ConstHandle2ConstNonNeutrinoEnergy nonNeutrinoEnergy,
   ConstHandle2ConstTotalEnergy totalEnergy
);
// +++ Create, general
extern_c Handle2FissionEnergyRelease
FissionEnergyReleaseCreate(
   const char *const label,
   ConstHandle2ConstPromptProductKE promptProductKE,
   ConstHandle2ConstPromptNeutronKE promptNeutronKE,
   ConstHandle2ConstDelayedNeutronKE delayedNeutronKE,
   ConstHandle2ConstPromptGammaEnergy promptGammaEnergy,
   ConstHandle2ConstDelayedGammaEnergy delayedGammaEnergy,
   ConstHandle2ConstDelayedBetaEnergy delayedBetaEnergy,
   ConstHandle2ConstNeutrinoEnergy neutrinoEnergy,
   ConstHandle2ConstNonNeutrinoEnergy nonNeutrinoEnergy,
   ConstHandle2ConstTotalEnergy totalEnergy
);
// +++ Assign
// +++ Use this to assign one handled object to another. Don't assign handles,
// +++ as with to = from. That has a meaning that you probably don't intend.
extern_c void
FissionEnergyReleaseAssign(ConstHandle2FissionEnergyRelease This, ConstHandle2ConstFissionEnergyRelease from);
// +++ Delete
// +++ We'll attempt to remove no-longer-used objects automatically, but you
// +++ may improve performance if you delete them when you're done with them.
extern_c void
FissionEnergyReleaseDelete(ConstHandle2ConstFissionEnergyRelease This);
// -----------------------------------------------------------------------------
// I/O
// Read, Write, Print
// Each returns 0 if failure, 1 if success.
// -----------------------------------------------------------------------------

// +++ Read from file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll examine the file's contents to determine its type automatically.
extern_c int
FissionEnergyReleaseRead(ConstHandle2FissionEnergyRelease This, const char *const filename);
// +++ Write to file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll use filename's extension to determine the type you want written.
extern_c int
FissionEnergyReleaseWrite(ConstHandle2ConstFissionEnergyRelease This, const char *const filename);
// +++ Print to standard output, in our prettyprinting format
extern_c int
FissionEnergyReleasePrint(ConstHandle2ConstFissionEnergyRelease This);
// +++ Print to standard output, as XML
extern_c int
FissionEnergyReleasePrintXML(ConstHandle2ConstFissionEnergyRelease This);
// +++ Print to standard output, as JSON
extern_c int
FissionEnergyReleasePrintJSON(ConstHandle2ConstFissionEnergyRelease This);
// -----------------------------------------------------------------------------
// Metadatum: label
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
FissionEnergyReleaseLabelHas(ConstHandle2ConstFissionEnergyRelease This);
// +++ Get
// +++ Returns by value
extern_c const char *
FissionEnergyReleaseLabelGet(ConstHandle2ConstFissionEnergyRelease This);
// +++ Set
extern_c void
FissionEnergyReleaseLabelSet(ConstHandle2FissionEnergyRelease This, const char *const label);
// -----------------------------------------------------------------------------
// Child: promptProductKE
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
FissionEnergyReleasePromptProductKEHas(ConstHandle2ConstFissionEnergyRelease This);
// --- Get, const
extern_c Handle2ConstPromptProductKE
FissionEnergyReleasePromptProductKEGetConst(ConstHandle2ConstFissionEnergyRelease This);
// +++ Get, non-const
extern_c Handle2PromptProductKE
FissionEnergyReleasePromptProductKEGet(ConstHandle2FissionEnergyRelease This);
// +++ Set
extern_c void
FissionEnergyReleasePromptProductKESet(ConstHandle2FissionEnergyRelease This, ConstHandle2ConstPromptProductKE promptProductKE);
// -----------------------------------------------------------------------------
// Child: promptNeutronKE
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
FissionEnergyReleasePromptNeutronKEHas(ConstHandle2ConstFissionEnergyRelease This);
// --- Get, const
extern_c Handle2ConstPromptNeutronKE
FissionEnergyReleasePromptNeutronKEGetConst(ConstHandle2ConstFissionEnergyRelease This);
// +++ Get, non-const
extern_c Handle2PromptNeutronKE
FissionEnergyReleasePromptNeutronKEGet(ConstHandle2FissionEnergyRelease This);
// +++ Set
extern_c void
FissionEnergyReleasePromptNeutronKESet(ConstHandle2FissionEnergyRelease This, ConstHandle2ConstPromptNeutronKE promptNeutronKE);
// -----------------------------------------------------------------------------
// Child: delayedNeutronKE
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
FissionEnergyReleaseDelayedNeutronKEHas(ConstHandle2ConstFissionEnergyRelease This);
// --- Get, const
extern_c Handle2ConstDelayedNeutronKE
FissionEnergyReleaseDelayedNeutronKEGetConst(ConstHandle2ConstFissionEnergyRelease This);
// +++ Get, non-const
extern_c Handle2DelayedNeutronKE
FissionEnergyReleaseDelayedNeutronKEGet(ConstHandle2FissionEnergyRelease This);
// +++ Set
extern_c void
FissionEnergyReleaseDelayedNeutronKESet(ConstHandle2FissionEnergyRelease This, ConstHandle2ConstDelayedNeutronKE delayedNeutronKE);
// -----------------------------------------------------------------------------
// Child: promptGammaEnergy
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
FissionEnergyReleasePromptGammaEnergyHas(ConstHandle2ConstFissionEnergyRelease This);
// --- Get, const
extern_c Handle2ConstPromptGammaEnergy
FissionEnergyReleasePromptGammaEnergyGetConst(ConstHandle2ConstFissionEnergyRelease This);
// +++ Get, non-const
extern_c Handle2PromptGammaEnergy
FissionEnergyReleasePromptGammaEnergyGet(ConstHandle2FissionEnergyRelease This);