versions/GNDS-v2.0/GNDS/fortran/src/v2.0/general/FissionEnergyRelease.f03


!! THIS FILE WAS AUTOGENERATED!
!! DO NOT MODIFY!

module generalFissionEnergyRelease
use iso_c_binding
interface


!! -----------------------------------------------------------------------------
!! Basics
!! Create, Assign, Delete
!! -----------------------------------------------------------------------------

!! Create, default, const
function FissionEnergyReleaseDefaultConst() &
      bind(C, name='FissionEnergyReleaseDefaultConst') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr) :: handle
end function FissionEnergyReleaseDefaultConst

!! Create, default
function FissionEnergyReleaseDefault() &
      bind(C, name='FissionEnergyReleaseDefault') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr) :: handle
end function FissionEnergyReleaseDefault

!! Create, general, const
function FissionEnergyReleaseCreateConst( &
   label, &
   promptProductKE, &
   promptNeutronKE, &
   delayedNeutronKE, &
   promptGammaEnergy, &
   delayedGammaEnergy, &
   delayedBetaEnergy, &
   neutrinoEnergy, &
   nonNeutrinoEnergy, &
   totalEnergy, &
   labelSize &
) &
      bind(C, name='FissionEnergyReleaseCreateConst') &
      result(handle)
   use iso_c_binding
   implicit none
   integer(c_size_t), intent(in), value :: labelSize
   character(c_char), intent(in) :: label(labelSize)
   type(c_ptr), value :: promptProductKE
   type(c_ptr), value :: promptNeutronKE
   type(c_ptr), value :: delayedNeutronKE
   type(c_ptr), value :: promptGammaEnergy
   type(c_ptr), value :: delayedGammaEnergy
   type(c_ptr), value :: delayedBetaEnergy
   type(c_ptr), value :: neutrinoEnergy
   type(c_ptr), value :: nonNeutrinoEnergy
   type(c_ptr), value :: totalEnergy
   type(c_ptr) :: handle
end function FissionEnergyReleaseCreateConst

!! Create, general
function FissionEnergyReleaseCreate( &
   label, &
   promptProductKE, &
   promptNeutronKE, &
   delayedNeutronKE, &
   promptGammaEnergy, &
   delayedGammaEnergy, &
   delayedBetaEnergy, &
   neutrinoEnergy, &
   nonNeutrinoEnergy, &
   totalEnergy, &
   labelSize &
) &
      bind(C, name='FissionEnergyReleaseCreate') &
      result(handle)
   use iso_c_binding
   implicit none
   integer(c_size_t), intent(in), value :: labelSize
   character(c_char), intent(in) :: label(labelSize)
   type(c_ptr), value :: promptProductKE
   type(c_ptr), value :: promptNeutronKE
   type(c_ptr), value :: delayedNeutronKE
   type(c_ptr), value :: promptGammaEnergy
   type(c_ptr), value :: delayedGammaEnergy
   type(c_ptr), value :: delayedBetaEnergy
   type(c_ptr), value :: neutrinoEnergy
   type(c_ptr), value :: nonNeutrinoEnergy
   type(c_ptr), value :: totalEnergy
   type(c_ptr) :: handle
end function FissionEnergyReleaseCreate

!! Assign
subroutine FissionEnergyReleaseAssign(handleLHS, handleRHS) &
      bind(C, name='FissionEnergyReleaseAssign')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handleLHS, handleRHS
end subroutine FissionEnergyReleaseAssign

!! Delete
subroutine FissionEnergyReleaseDelete(handle) &
      bind(C, name='FissionEnergyReleaseDelete')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
end subroutine FissionEnergyReleaseDelete


!! -----------------------------------------------------------------------------
!! I/O
!! Read, Write, Print
!! Each returns 0 if failure, 1 if success.
!! -----------------------------------------------------------------------------

!! Read from file
function FissionEnergyReleaseRead(handle, filename, filenameSize) &
      bind(C, name='FissionEnergyReleaseRead') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), value :: filenameSize
   character(c_char), intent(in) :: filename(filenameSize)
   integer(c_int) :: success
end function FissionEnergyReleaseRead

!! Write to file
function FissionEnergyReleaseWrite(handle, filename, filenameSize) &
      bind(C, name='FissionEnergyReleaseWrite') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), value :: filenameSize
   character(c_char), intent(in) :: filename(filenameSize)
   integer(c_int) :: success
end function FissionEnergyReleaseWrite

!! Print to standard output, in our prettyprinting format
function FissionEnergyReleasePrint(handle) &
      bind(C, name='FissionEnergyReleasePrint') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function FissionEnergyReleasePrint

!! Print to standard output, as XML
function FissionEnergyReleasePrintXML(handle) &
      bind(C, name='FissionEnergyReleasePrintXML') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function FissionEnergyReleasePrintXML

!! Print to standard output, as JSON
function FissionEnergyReleasePrintJSON(handle) &
      bind(C, name='FissionEnergyReleasePrintJSON') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function FissionEnergyReleasePrintJSON


!! -----------------------------------------------------------------------------
!! Metadatum: label
!! -----------------------------------------------------------------------------

!! Has
function FissionEnergyReleaseLabelHas(handle) &
      bind(C, name='FissionEnergyReleaseLabelHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function FissionEnergyReleaseLabelHas

!! Get
function FissionEnergyReleaseLabelGet(handle) &
      bind(C, name='FissionEnergyReleaseLabelGet') &
      result(label)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: label
end function FissionEnergyReleaseLabelGet

!! Set
subroutine FissionEnergyReleaseLabelSet(handle, label, labelSize) &
      bind(C, name='FissionEnergyReleaseLabelSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: labelSize
   character(c_char), intent(in) :: label(labelSize)
end subroutine FissionEnergyReleaseLabelSet


!! -----------------------------------------------------------------------------
!! Child: promptProductKE
!! -----------------------------------------------------------------------------

!! Has
function FissionEnergyReleasePromptProductKEHas(handle) &
      bind(C, name='FissionEnergyReleasePromptProductKEHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function FissionEnergyReleasePromptProductKEHas

!! Get, const
function FissionEnergyReleasePromptProductKEGetConst(handle) &
      bind(C, name='FissionEnergyReleasePromptProductKEGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function FissionEnergyReleasePromptProductKEGetConst

!! Get
function FissionEnergyReleasePromptProductKEGet(handle) &
      bind(C, name='FissionEnergyReleasePromptProductKEGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function FissionEnergyReleasePromptProductKEGet

!! Set
subroutine FissionEnergyReleasePromptProductKESet(handle, fieldHandle) &
      bind(C, name='FissionEnergyReleasePromptProductKESet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine FissionEnergyReleasePromptProductKESet


!! -----------------------------------------------------------------------------
!! Child: promptNeutronKE
!! -----------------------------------------------------------------------------

!! Has
function FissionEnergyReleasePromptNeutronKEHas(handle) &
      bind(C, name='FissionEnergyReleasePromptNeutronKEHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function FissionEnergyReleasePromptNeutronKEHas

!! Get, const
function FissionEnergyReleasePromptNeutronKEGetConst(handle) &
      bind(C, name='FissionEnergyReleasePromptNeutronKEGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function FissionEnergyReleasePromptNeutronKEGetConst

!! Get
function FissionEnergyReleasePromptNeutronKEGet(handle) &
      bind(C, name='FissionEnergyReleasePromptNeutronKEGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function FissionEnergyReleasePromptNeutronKEGet

!! Set
subroutine FissionEnergyReleasePromptNeutronKESet(handle, fieldHandle) &
      bind(C, name='FissionEnergyReleasePromptNeutronKESet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine FissionEnergyReleasePromptNeutronKESet


!! -----------------------------------------------------------------------------
!! Child: delayedNeutronKE
!! -----------------------------------------------------------------------------

!! Has
function FissionEnergyReleaseDelayedNeutronKEHas(handle) &
      bind(C, name='FissionEnergyReleaseDelayedNeutronKEHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function FissionEnergyReleaseDelayedNeutronKEHas

!! Get, const
function FissionEnergyReleaseDelayedNeutronKEGetConst(handle) &
      bind(C, name='FissionEnergyReleaseDelayedNeutronKEGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function FissionEnergyReleaseDelayedNeutronKEGetConst

!! Get
function FissionEnergyReleaseDelayedNeutronKEGet(handle) &
      bind(C, name='FissionEnergyReleaseDelayedNeutronKEGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function FissionEnergyReleaseDelayedNeutronKEGet

!! Set
subroutine FissionEnergyReleaseDelayedNeutronKESet(handle, fieldHandle) &
      bind(C, name='FissionEnergyReleaseDelayedNeutronKESet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine FissionEnergyReleaseDelayedNeutronKESet


!! -----------------------------------------------------------------------------
!! Child: promptGammaEnergy
!! -----------------------------------------------------------------------------

!! Has
function FissionEnergyReleasePromptGammaEnergyHas(handle) &
      bind(C, name='FissionEnergyReleasePromptGammaEnergyHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function FissionEnergyReleasePromptGammaEnergyHas

!! Get, const
function FissionEnergyReleasePromptGammaEnergyGetConst(handle) &
      bind(C, name='FissionEnergyReleasePromptGammaEnergyGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function FissionEnergyReleasePromptGammaEnergyGetConst

!! Get
function FissionEnergyReleasePromptGammaEnergyGet(handle) &
      bind(C, name='FissionEnergyReleasePromptGammaEnergyGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function FissionEnergyReleasePromptGammaEnergyGet
